fix (icons) Fixing alignments and adding new icons to the preview

--- a/framework/scss/_libraries/_base.scss
+++ b/framework/scss/_libraries/_base.scss
@@ -329,3 +329,9 @@ figure {
 .ds44-flex-align-center {  
   align-items: center;
 }
+
+/* Icons */
+
+.icon::before {
+  vertical-align: bottom; // fixing font-icon alignement
+}
